[tool.poetry]
name = "2020-09-11-normalising-flows"
version = "0.1.0"
description = ""
authors = ["Emmanuel-R8 <emmanuel.rialland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
